--- a/programminglanguages.css
+++ b/programminglanguages.css
@@ -6,7 +6,7 @@ body{
 
             }
             .hoverc{
-                background-color: #25042f;
+                background-color:#340144;
                 padding:10px;
                 border-radius: 20px;
                 margin:1px;
