--- a/programminghome.css
+++ b/programminghome.css
@@ -1,7 +1,6 @@
  body{
           text-align: center;
-          background-color: #dabde3;
-          color:rgb(239,225,242);
+          background-color: #faf2fd;
           font-family: helvetica;
         }
         h1{
@@ -22,12 +21,12 @@
         p{
             font-size: 25px;
             text-align:left;
+            color:#ebe0ee;
         }
         h2{
             font-size: 40px;
             color:#4c2358;
             display: inline;
-            background-color: rgb(239, 225,242);
             padding: 0 20px 0 20px;
         }
         h1{
@@ -38,21 +37,21 @@
         h3{
             font-size: 30px;
             text-align: left;
-        }
-        .div1{
-            padding: 50px;
-            margin: 10px;
+            color: #dabde3;
         }
         .div2{
-            padding: 50px;
+            padding: 10px;
             margin: 10px;
+            background-color:#dabde3;
+            color: #1c0223;
+            border-radius: 5px;
         }
         .end{
             text-align: center;
             color: #1c0223;
         }
             .hoverc{
-                background-color: #25042f;
+                background-color: #4e0565;
                 padding:10px;
                 border-radius: 20px;
                 margin:1px;
@@ -60,7 +59,7 @@
 
             }
             .hoverc:hover{
-                  background-color: rgb(210, 100, 211);
+                  background-color: rgb(74, 7, 75);
                   padding: 10px;
             }
             a{
@@ -68,7 +67,6 @@
                 color:rgb(239, 225, 242); 
             }
             section{
-                background-color:#582568;
                 padding:30px;
                 margin:20px;
                 border-radius: 30px;
@@ -77,7 +75,7 @@
                 font-size: 15px;
             }
             .hoverc1{
-                 background-color:#25042f;
+                 background-color:#340144;
                  margin:2px;
                  border-radius: 10px;
                  padding:12px;
@@ -91,9 +89,16 @@
 
             }
             .background{
-                background-color:rgb(210, 100, 211) ;
+                background-color:rgb(74, 7, 75) ;
                 padding:10px;
+                margin: 1px;
                 border-radius: 20px;
+            }
+            .page{
+                background-color: #7e558b;
+                margin:0%;
+                padding: 10px;;
+                border-radius: 10px;
             }
 
 @media screen and (max-width:600px){
