--- a/html1intropracticalquestions.css
+++ b/html1intropracticalquestions.css
@@ -24,6 +24,7 @@
                 color:#4c2358;
                 margin: 2px;
                 display: inline;
+                border: none;
 
             }
             a{
@@ -36,7 +37,7 @@
                 background-color:#e9d0f1;
                 border-radius: 10px;
                 padding: 20px;
-                margin: 30px;
+                margin: 10px;
                 box-shadow: #16011d; 
             }
             ::placeholder{
@@ -56,8 +57,8 @@
                 border-radius:40px;
             }
             @media screen and (max-width:600px){
-                .input{
-                    font-size: 10px;
+                input{
+                    font-size: 5px;
                     padding: 5px;
                 }
                  .question{
@@ -65,8 +66,9 @@
                 font-size:10px;
                 background-color:#e9d0f1;
                 border-radius: 10px;
-                padding: 20px;
-                margin: 30px;
+                padding: 30px;
+                margin: 10px;
                 box-shadow: #16011d; 
             }
+            
             }
