--- a/html1introduction.css
+++ b/html1introduction.css
@@ -3,7 +3,7 @@
             }
             body{
                 font-family: helvetica;
-               background-color: #f7e3fd;
+               background-color: #faf2fd;
                 color:rgb(239, 225, 242); 
             }
             h1{
