--- a/html1introductionmcq.css
+++ b/html1introductionmcq.css
@@ -6,7 +6,7 @@ h1{
                 font-size: 20px;
             }
             body{
-                background-color:rgb(239, 225, 242); 
+                 background-color: #faf2fd;
                 color: #4c2358;
                 margin:30px;
                 font-family: helvetica;
