--- a/learn.css
+++ b/learn.css
@@ -61,7 +61,7 @@
             .main{
                 background-color: #ffffff;
                 margin: 8px;
-                padding: 10px;
+                padding: 15px;
             }
              span{
                 background-color: #bf96cc;
@@ -79,6 +79,14 @@
             }
             td{
                 background-color: #f7ebfc;
+            }
+            .main1{
+                background-color:  rgb(85, 31, 86);
+                color:#faf2fd;
+                display:inline;
+                margin: 8px;
+                padding:10px;
+                font-size: 20px;
             }
 
             
@@ -124,6 +132,14 @@
                 .option{
                     font-size: 16px;
                 }
+                 .main1{
+                background-color:  rgb(85, 31, 86);
+                color:#faf2fd;
+                display:inline;
+                margin: 8px;
+                padding:10px;
+                font-size:10px;
+            }
             
            
             
